--- a/src/pages/CoursePage/course.css
+++ b/src/pages/CoursePage/course.css
@@ -1,17 +1,38 @@
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  color: white;
 }
-.chapter-list{
-    border-radius: 0 7px 10px 7px;
+
+.chapter-list {
+  border-radius: 0 7px 10px 7px;
   background-color: rgba(15, 14, 14, 0.8);
   width: 500px;
-  margin: 20px;
+  padding: 15px;
+  margin: 0 30px 0 0;
+  border: 1px solid white;
+  outline: 1px solid white;
+  outline-offset: -5px;
 }
-.info-section{
-    border-radius: 0 7px 10px 7px;
+
+.info-section {
+  border-radius: 0 7px 10px 7px;
   background-color: rgba(15, 14, 14, 0.8);
   width: 1000px;
-  margin: 20px;
+  padding: 15px;
+  border: 1px solid white;
+  outline: 1px solid white;
+  outline-offset: -5px;
+}
+
+.borderDiv {
+  border: 1px solid white;
+  outline: 1px solid white;
+  outline-offset: -5px;
+  border-radius: 0 7px 10px 7px;
+  background-color: rgba(15, 14, 14, 0.8);
+  padding: 15px;
+  margin: 0 auto;
+  color: white;
 }
